# Corvus

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  start.sh
agents/executor/: __main__.py  main.py
agents/forensics/: __main__.py  main.py
agents/observer/: __main__.py  detector.py  main.py
core/: config.py  envelope.py  events.py  kafka_client.py  llm.py
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: ApprovalPanel.jsx  ChatInterface.jsx  IncidentTimeline.jsx  StatusBar.jsx  Topology.jsx
frontend/src/hooks/: useIncidents.js  useSSE.js
frontend/src/store/: index.js
gateway/: main.py
infra/chaos/: chaos.py
infra/services/api-gateway/: app.py
infra/services/notification-service/: Dockerfile  app.py
infra/sql/: init.sql
memory/: incidents.py  store.py
orchestrator/: __main__.py  main.py
scripts/: approve.py  push_metric.py  seed_runbooks.py
tests/unit/: test_detector.py
