[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "corvus"
version = "0.1.0"
description = "Self-healing agentic infrastructure monitor"
requires-python = ">=3.11"

dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "confluent-kafka>=2.3",
    "ollama>=0.2",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "sse-starlette>=2.0",
    "asyncpg>=0.29",
    "pgvector>=0.2",
    "sqlalchemy[asyncio]>=2.0",
    "docker>=7.0",
    "numpy>=1.26",
    "scipy>=1.12",
    "httpx>=0.27",
    "redis>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
include = ["core*", "agents*", "orchestrator*", "memory*", "gateway*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
